# nornir-cli

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py
src/classes/: config.py  env.py  metadata.py
src/commands/: configure.py  connectivity.py  device_info.py  flash.py  generate.py  info.py  nornir.py  transfer.py  verify.py
src/commands/help_and_utils/: shell.py  utils.py
src/commands/inventory/: get_inventory.py  helpers.py  manage_inventory.py
src/commands/workflows/: connectivity.py  ios_upgrade.py
src/tasks/: configure.py  connectivity.py  device_info.py  flash.py  generate.py  nornir.py  shared.py  solarwinds.py  support.py  timezone.py  transfer.py  verify.py  workflows.py
src/utils/: data_fields.py  helpers.py  import_commands.py  nbcd_filters.py  type_defs.py  validators.py
